# fbc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  release-please-config.json
.github/workflows/: ci.yml
bootstrap/: fbc
bootstrap/darwin-aarch64/: ast-gosub.c  ast-helper.c  ast-misc.c  ast-node-addr.c  ast-node-arg.c  ast-node-assign.c  ast-node-conv.c  ast-node-data.c  ast-node-decl.c  ast-node-idx.c  ast-node-iif.c  ast-node-mem.c  ast-node-misc.c  ast-node-ptr.c  ast-optimize.c  ast.c  dstr.c  edbg_stab.c  emit.c  emit_x86.c  fb-main.c  fb.c  fbc.c  ir-hlc.c  ir-llvm.c  ir.c  lex.c  list.c  parser-assignment.c  parser-comment.c  parser-compound-do.c  parser-compound-namespace.c  parser-compound-scope.c  parser-decl-enum.c  parser-decl-option.c  parser-decl-proc.c  parser-decl-symb-init.c  parser-decl-symbtype.c  parser-decl-typedef.c  parser-expr-binary.c  (+33 more)
bootstrap/linux-aarch64/: ast-gosub.c  ast-node-call.c  ast-node-check.c  ast-node-const.c  ast-node-conv.c  ast-node-data.c  ast-node-macro.c  ast-node-proc.c  ast-node-scope.c  ast-node-typeini.c  ast-node-uop.c  ast-node-var.c  ast-optimize.c  dstr.c  edbg_stab.c  emit_SSE.c  error.c  fb-main.c  fb.c  fbc.c  hlp-str.c  hlp.c  ir-gas64.c  ir-hlc.c  ir-llvm.c  ir-tac.c  lex-utf.c  lex.c  list.c  objinfo.c  parser-comment.c  parser-compound-for.c  parser-compound-scope.c  parser-compound-select-const.c  parser-compound-select.c  parser-compound-while.c  parser-compound-with.c  parser-compound.c  parser-decl-const.c  parser-decl-def.c  (+51 more)
bootstrap/linux-x86_64/: ast-helper.c  ast-misc.c  ast-node-addr.c  ast-node-arg.c  ast-node-assign.c  ast-node-bop.c  ast-node-branch.c  ast-node-check.c  ast-node-const.c  ast-node-decl.c  ast-node-idx.c  ast-node-iif.c  ast-node-macro.c  ast-node-mem.c  ast-node-misc.c  ast-node-proc.c  ast-node-ptr.c  ast-node-var.c  ast-vectorize.c  ast.c  emit.c  emit_x86.c  error.c  fb.c  fbc.c  hash.c  hlp-str.c  hlp.c  ir-gas64.c  ir-hlc.c  ir-llvm.c  ir-tac.c  ir.c  lex.c  objinfo.c  parser-assignment.c  parser-compound-do.c  parser-compound-extern.c  parser-compound-for.c  parser-compound-if.c  (+52 more)
bootstrap/win64/: ast-gosub.c  ast-helper.c  ast-misc.c  ast-node-addr.c  ast-node-arg.c  ast-node-assign.c  ast-node-bop.c  ast-node-branch.c  ast-node-call.c  ast-node-check.c  ast-node-const.c  ast-node-conv.c  ast-node-data.c  ast-node-decl.c  ast-node-idx.c  ast-node-iif.c  ast-node-macro.c  ast-node-mem.c  ast-node-misc.c  ast-node-proc.c  ast-node-ptr.c  ast-node-scope.c  ast-node-typeini.c  ast-node-uop.c  ast-node-var.c  ast-optimize.c  ast-vectorize.c  ast.c  dstr.c  edbg_stab.c  emit.c  emit_SSE.c  emit_x86.c  error.c  fb-main.c  fb.c  fbc.c  hlp-str.c  hlp.c  ir-gas64.c  (+100 more)
cmake/: Bootstrap.cmake  DetectPlatform.cmake  FixComputedGoto.cmake  Install.cmake  fix_computed_goto.py
cmake/toolchains/: amiga-m68k.cmake
inc/amiga/: asl.bi  battclock.resource.bi  battmem.resource.bi  bullet.bi  card.resource.bi  chooser.gadget.bi  clicktab.gadget.bi  colorwheel.gadget.bi  commodities.bi  datatypes.bi  datebrowser.gadget.bi  disk.resource.bi  diskfont.bi  dos.bi  exec.bi  expansion.bi  gadtools.bi  graphics.bi  icon.bi  iffparse.bi  input.bi  intuition.bi  keymap.bi  layers.bi  layout.gadget.bi  listbrowser.gadget.bi  locale.bi  lowlevel.bi  mathffp.bi  mathieeedoubbas.bi  mathieeedoubtrans.bi  mathieeesingbas.bi  mathieeesingtrans.bi  mathtrans.bi  misc.resource.bi  nonvolatile.bi  potgo.resource.bi  radiobutton.gadget.bi  ramdrive.bi  realtime.bi  (+8 more)
src/compiler/: CMakeLists.txt  fb.bas  fb.bi  fbc.bas
src/gfxlib2/: CMakeLists.txt
src/gfxlib2/amiga/: gfx_amiga.c  gfx_joystick.c
src/rtlib/: CMakeLists.txt  fb.h  fb_config.h  fb_private_thread.h  init.c  profile_cycles.c  signals.c
src/rtlib/amiga/: console_stubs.c  fb_amiga.h  fb_amiga_rt.c  gfx_amiga.c  hinit.c  init_override.c  io_mouse.c  io_multikey.c  io_printbuff.c  io_serial.c  mathbase_stub.c  sprintf.c  startup.c  startup.s  sys_fmem.c  sys_getexename.c  sys_getexepath.c
test/amiga/: .gitignore  build_and_test.sh  test.fs-uae
test/amiga/hd/S/: Shell-startup  Startup-Sequence
tools/: sfd2bi.py
